# sci-form

./: .gitattributes  .gitignore  ALPHA_BETA_ARCHITECTURE.md  ALPHA_EXPORT_MATRIX.md  ALPHA_SESSION5_SUMMARY.md  CHANGELOG.md  Cargo.toml  GDB20.1000.smi  GDB20.50000.smi  LICENSE  README.md  ROADMAP.md  ROADMAP_ALGORITHMS.md  ROADMAP_ALPHA_ELECTROCHEMISTRY_PERIODIC_KINETICS_RENDERING.md  ROADMAP_ALPHA_ELECTROCHEMISTRY_PERIODIC_KINETICS_RENDERING_CHECKLIST.md  ROADMAP_EXPERIMENTAL.md  ROADMAP_REACTION_DYNAMICS_3D.md  SESSION_5_PART2_SUMMARY.md  SESSION_5_VISUAL_SUMMARY.md  SMIRKS_EXAMPLES.md  SMIRKS_REVIEW.md  SMIRKS_TESTING.md  TESTING.md  TODO.md  benchmark_10k_rdkit.py  benchmark_gfn2_100.py  benchmark_rdkit.py  benchmark_results.txt  compare_full.py  dynamics-roadmap-implementation.md  package-lock.json  package.json  pnpm-lock.yaml  r.md  r_experimental_2.md  rd.md  roadmap1.md  roadmap2.md  sci-form-exportation.md  smirks_comparison_results.json  (+4 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
all-docs/: alignment.md  alpha.md  ani.md  beta.md  bin.md  charges.md  charges_eeq.md  dipole.md  dispersion.md  distgeom.md  dos.md  eht.md  esp.md  forcefield.md  gpu.md  hf.md  ir.md  materials.md  ml.md  nmr.md  optimization.md  pm3.md  population.md  resto-src.md  rings.md  roadmap.md  scf.md  smarts.md  solvation_alpb.md  spectroscopy.md  surface.md  transport.md  xtb.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  calc_cmds.rs  embed_cmds.rs  experimental_cmds.rs  format.rs  main.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/src/: alpha.rs  analysis.rs  beta.rs  compare.rs  dynamics.rs  eht.rs  electronic.rs  embed.rs  experimental.rs  forcefield.rs  hf_ani_esp.rs  lib.rs  materials.rs  mesh.rs  ml.rs  nmr.rs  population.rs  potentials.rs  properties.rs  reactivity.rs  rings.rs  smirks.rs  solvation.rs  spectroscopy.rs  stereo.rs  system.rs  transport.rs
crates/wasm/: Cargo.toml  build.sh  rust-toolchain.toml
crates/wasm/examples/vite-webgpu-hybrid/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.mjs
crates/wasm/examples/vite-webgpu-hybrid/src/: main.js
crates/wasm/js/alpha/: index.d.ts  index.js
crates/wasm/js/beta/: index.d.ts  index.js
crates/wasm/src/: alpha.rs  beta.rs  dynamics.rs  dynamics_live.rs  eht.rs  electronic.rs  embed.rs  esp.rs  experimental.rs  forcefield.rs  helpers.rs  lib.rs  materials.rs  mesh.rs  ml.rs  properties.rs  reaction.rs  reactivity.rs  rings.rs  solvation.rs  spectroscopy.rs  stereo.rs  system.rs  transport.rs  webgpu.rs
crates/wasm/ts/: live_simulation.ts  simulation_loop.ts
data/: chembl_10k_largest.smi  chembl_10k_practical.smi  chembl_10k_practical_asc.smi  chembl_1k_practical.smi  chembl_1k_practical_asc.smi
docs/: benchmarks.md  dynamics_reactivity_roadmap.md  index.md  nmr_detailed_roadmap.md  spectroscopy_roadmap.md
docs/.vitepress/: config.mts
docs/algorithm/: bounds-matrix.md  density-of-states.md  dipole-moments.md  distance-geometry.md  electrostatic-potential.md  embedding.md  etkdg-refinement.md  extended-huckel-theory.md  force-fields.md  hf3c-quantum-engine.md  ir-spectroscopy.md  machine-learning-potentials.md  materials-assembly.md  molecular-alignment.md  nmr-spectroscopy.md  overview.md  population-analysis.md  quantum-validation-roadmap.md  smarts-matching.md  smiles-parsing.md  strain-energy.md  uvvis-spectroscopy.md  validation.md  web-transport.md  webgpu-validation.md
docs/api/: cli.md  complete-supported-reference.md  python.md  rust.md  typescript.md
docs/experimental/: alpb.md  alpha.md  beta.md  cga.md  cpm.md  d4.md  eeq.md  gsm.md  kpm.md  mbh.md  overview.md  randnla.md  riemannian.md  sdr.md
docs/guide/: cli.md  getting-started.md  gpu-portabilidad.md  metal-eht-validity.md  python.md  reaction-backends.md  reaction-viewer.md  rust.md  typescript.md  what-is-sci-form.md
docs/rdkit_etkdg_analysis/: 01_bounds_1_2_and_1_3.md  02_bounds_1_4_and_vdw.md  03_embedding_and_minimization.md
scripts/: 10k_smiles.smi  analyze_bonds.py  bench_gfn2_100.py  benchmark_100.py  benchmark_ani.py  benchmark_browser.html  benchmark_diverse.py  benchmark_hf3c.py  benchmark_output.txt  benchmark_rdkit.py  bump_version.sh  check_attempts.py  check_rng_denom.py  compare_bounds.py  compare_bounds_batch.py  compare_bounds_detail.py  compare_bounds_remaining.py  compare_distances_mol27.py  compare_eigen.py  compare_embedding.py  compare_energies.py  compare_ethane.py  compare_ff_constraints.py  compare_mmff_effect.py  compare_pipeline.py  compare_reaction_layers.py  compare_smirks_reactions.py  debug_eigenvectors.py  debug_embedding.py  debug_mol84.py  debug_remaining.py  download_smiles.py  dump_bounds.py  dump_bounds_matrix.py  dump_intermediates.py  dump_rdkit_bounds.py  dump_rdkit_pipeline.py  extract_chembl_10k_largest.py  extract_chembl_practical.py  extract_torsions.py  (+29 more)
src/: canonical_smiles.rs  clustering.rs  conformer.rs  distgeom.rs  dynamics.rs  etkdg.rs  experimental_status.rs  fixture_io.rs  graph.rs  lib.rs  mesh.rs  periodic.rs  potentials.rs  reactivity.rs  smiles.rs  smirks.rs  solvation.rs  stereo.rs  topology.rs
tests/: alpha_cross_method.rs  alpha_dft_validation.rs  alpha_dynamics_conservation.rs  alpha_mlff_consistency.rs  alpha_reaction_dynamics_3d.rs  alpha_reaxff_validation.rs  alpha_scf_eri_accuracy.rs  analysis.rs  benchmark_volume_vs_mesh.rs  benchmarks.rs  check_atom_counts.rs  ci.rs  compare_bounds.rs  debug.rs  debug_4d_coords.rs  debug_attempts.rs  debug_bounds.rs  debug_compare_bounds.rs  debug_differential.rs  debug_embed.rs  debug_failure_diagnosis.rs  debug_ff.rs  debug_ff_energy.rs  debug_remaining.rs  differential_testing.rs  dump_new_metal_refs.rs  e3_justification.rs  reaction_battery.rs  reaction_dynamics_study.rs  regression.rs  test_10k.rs  test_algorithm_validation.rs  test_bounds_compare.rs  test_charges.rs  test_chembl_10k.rs  test_comprehensive_1k_benchmark.rs  test_cross_language.py  test_diverse_molecules.rs  test_eht.rs  test_eht_metal_references.rs  (+25 more)
(+458 files in other folders)
