[workspace]
members = [".", "crates/cli", "crates/python", "crates/wasm"]

[package]
name = "sci-form"
version = "0.1.0"
edition = "2021"
authors = ["Sci-Form Team"]
description = "VeloSci 3D Conformer Engine — high-performance molecular conformer generation"
license = "MIT"

[lib]
crate-type = ["rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
petgraph = "0.6.4"
nalgebra = { version = "0.32", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
strip = true
