[workspace]
members = [".", "crates/cli", "crates/python", "crates/wasm"]

[package]
name = "sci-form"
version = "0.4.3"
edition = "2021"
authors = ["Sci-Form Team"]
description = "High-performance 3D molecular conformer generation using ETKDG distance geometry"
license = "MIT"
repository = "https://github.com/jigonzalez930209/sci-form"
homepage = "https://sci-form.dev"
documentation = "https://docs.rs/sci-form"
readme = "README.md"
keywords = ["chemistry", "conformer", "3d", "molecule", "etkdg"]
categories = ["science", "algorithms"]
exclude = [
    "rdkit-master/",
    "tests/fixtures/*.json",
    "data/",
    "scripts/",
    "GDB20.50000.smi",
    "docs/",
]

[lib]
crate-type = ["rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
petgraph = "0.6.4"
nalgebra = { version = "0.32", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
rayon = "1.10"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
