[package]
name = "sci-form-cli"
version = "0.6.1"
edition = "2021"
description = "CLI tool for high-performance 3D molecular conformer generation"
license = "MIT"
repository = "https://github.com/jigonzalez930209/sci-form"
readme = "../../README.md"
keywords = ["chemistry", "conformer", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "sci-form"
path = "src/main.rs"

[features]
default = ["parallel"]
parallel = ["sci-form/parallel"]

[dependencies]
sci-form = { path = "../..", version = "0.6.1", default-features = false }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde_json = "1.0"
