[package]
name = "sci-form-cli"
version = "0.12.2"
edition = "2021"
description = "CLI tool for high-performance 3D molecular conformer generation"
license = "MIT"
repository = "https://github.com/jigonzalez930209/sci-form"
readme = "../../README.md"
keywords = ["chemistry", "conformer", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "sci-form"
path = "src/main.rs"

[features]
default = ["parallel"]
parallel = ["sci-form/parallel"]
experimental-cga = ["sci-form/experimental-cga"]
experimental-randnla = ["sci-form/experimental-randnla"]
experimental-riemannian = ["sci-form/experimental-riemannian"]
experimental-kpm = ["sci-form/experimental-kpm"]
experimental-eeq = ["sci-form/experimental-eeq"]
experimental-alpb = ["sci-form/experimental-alpb"]
experimental-d4 = ["sci-form/experimental-d4"]
experimental-sdr = ["sci-form/experimental-sdr"]
experimental-mbh = ["sci-form/experimental-mbh"]
experimental-cpm = ["sci-form/experimental-cpm"]
experimental-gsm = ["sci-form/experimental-gsm"]

[dependencies]
sci-form = { path = "../..", version = "0.12.2", default-features = false }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde_json = "1.0"
