[package]
name = "sci-form-python"
version = "0.7.0"
edition = "2021"
description = "Python bindings for sci-form 3D conformer generation"

[lib]
name = "sci_form"
crate-type = ["cdylib"]

[features]
default = ["parallel"]
parallel = ["sci-form-core/parallel"]

[dependencies]
sci-form-core = { path = "../..", package = "sci-form", version = "0.7.0", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
