[package]
name = "sci-form-python"
version = "0.10.6"
edition = "2021"
description = "Python bindings for sci-form 3D conformer generation"

[lib]
name = "sci_form"
crate-type = ["cdylib"]

[features]
default = ["parallel"]
parallel = ["sci-form-core/parallel"]
experimental-cga = ["sci-form-core/experimental-cga"]
experimental-randnla = ["sci-form-core/experimental-randnla"]
experimental-riemannian = ["sci-form-core/experimental-riemannian"]
experimental-kpm = ["sci-form-core/experimental-kpm"]
experimental-eeq = ["sci-form-core/experimental-eeq"]
experimental-alpb = ["sci-form-core/experimental-alpb"]
experimental-d4 = ["sci-form-core/experimental-d4"]
experimental-sdr = ["sci-form-core/experimental-sdr"]
experimental-mbh = ["sci-form-core/experimental-mbh"]
experimental-cpm = ["sci-form-core/experimental-cpm"]
experimental-gsm = ["sci-form-core/experimental-gsm"]

[dependencies]
sci-form-core = { path = "../..", package = "sci-form", version = "0.10.6", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
