[package]
name = "sci-form-python"
version = "0.14.4"
edition = "2021"
description = "Python bindings for sci-form 3D conformer generation"

[lib]
name = "sci_form"
crate-type = ["cdylib"]

[features]
default = ["parallel"]
parallel = ["sci-form-core/parallel"]
experimental-cga = ["sci-form-core/experimental-cga"]
experimental-randnla = ["sci-form-core/experimental-randnla"]
experimental-riemannian = ["sci-form-core/experimental-riemannian"]
experimental-kpm = ["sci-form-core/experimental-kpm"]
experimental-eeq = ["sci-form-core/experimental-eeq"]
experimental-alpb = ["sci-form-core/experimental-alpb"]
experimental-d4 = ["sci-form-core/experimental-d4"]
experimental-sdr = ["sci-form-core/experimental-sdr"]
experimental-mbh = ["sci-form-core/experimental-mbh"]
experimental-cpm = ["sci-form-core/experimental-cpm"]
experimental-gsm = ["sci-form-core/experimental-gsm"]
alpha-dynamics-live = ["sci-form-core/alpha-dynamics-live"]
alpha-dft = ["sci-form-core/alpha-dft", "sci-form-core/alpha-obara-saika"]
alpha-reaxff = ["sci-form-core/alpha-reaxff"]
alpha-mlff = ["sci-form-core/alpha-mlff"]
alpha-obara-saika = ["sci-form-core/alpha-obara-saika"]
alpha-cga = ["sci-form-core/alpha-cga"]
alpha-gsm = ["sci-form-core/alpha-gsm"]
alpha-sdr = ["sci-form-core/alpha-sdr"]
alpha-edl = ["sci-form-core/alpha-edl"]
alpha-periodic-linear = ["sci-form-core/alpha-periodic-linear"]
alpha-kinetics = ["sci-form-core/alpha-kinetics"]
alpha-render-bridge = ["sci-form-core/alpha-render-bridge"]
alpha-imd = ["sci-form-core/alpha-imd", "alpha-dynamics-live"]
alpha-reaction-dynamics = ["sci-form-core/alpha-reaction-dynamics"]
beta-kpm = ["sci-form-core/beta-kpm"]
beta-mbh = ["sci-form-core/beta-mbh"]
beta-randnla = ["sci-form-core/beta-randnla"]
beta-riemannian = ["sci-form-core/beta-riemannian"]
beta-cpm = ["sci-form-core/beta-cpm"]

[dependencies]
sci-form-core = { path = "../..", package = "sci-form", version = "0.14.4", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module", "serde"] }
rayon = "1.10"
nalgebra = "0.32"
serde_json = "1.0"
