[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sci-form"
version = "0.1.0"
description = "High-performance 3D molecular conformer generation"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
