[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sciforma"
version = "0.10.6"
description = "High-performance 3D molecular conformer generation — Python bindings"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "../../README.md"
keywords = ["chemistry", "conformer", "3d", "molecule", "rdkit", "etkdg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://sci-form.dev"
Repository = "https://github.com/jigonzalez930209/sci-form"
Documentation = "https://sci-form.dev/python"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
