[package]
name = "sci-form-wasm"
version = "0.11.1"
edition = "2021"
description = "WASM/TypeScript bindings for high-performance 3D molecular conformer generation"
license = "MIT"
repository = "https://github.com/jigonzalez930209/sci-form"
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = []
parallel = ["sci-form/parallel", "wasm-bindgen-rayon", "dep:rayon"]
experimental-gpu = ["sci-form/experimental-gpu", "dep:wgpu", "dep:wasm-bindgen-futures", "dep:futures-channel"]
experimental-cga = ["sci-form/experimental-cga"]
experimental-randnla = ["sci-form/experimental-randnla"]
experimental-riemannian = ["sci-form/experimental-riemannian"]
experimental-kpm = ["sci-form/experimental-kpm"]
experimental-eeq = ["sci-form/experimental-eeq"]
experimental-alpb = ["sci-form/experimental-alpb"]
experimental-d4 = ["sci-form/experimental-d4"]
experimental-sdr = ["sci-form/experimental-sdr"]
experimental-mbh = ["sci-form/experimental-mbh"]
experimental-cpm = ["sci-form/experimental-cpm"]
experimental-gsm = ["sci-form/experimental-gsm"]

[dependencies]
sci-form = { path = "../..", version = "0.11.1", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.3.0", optional = true }
serde = "1.0"
serde_json = "1.0"
nalgebra = "0.32"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-channel = { version = "0.3", optional = true }
wgpu = { version = "29", optional = true }
rayon = { version = "1.10", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
